--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <div id="background" >
 
-            <div class="white-text bg-color" style="padding:50px;border-radius:20px; width:50vw;height:50vw;; font-size:50px;" >
+            <div class="white-text bg-color" style="padding:50px;border-radius:20px; width:50vw;height:50vw; font-size:50px;" >
                 <p>
                     My name is Fortune Ellah, I am 24 years old, and I live in Lagos, Nigeria. I have a B-Tech in Chemical Engineering from the University of Port Harcourt, Nigeria. I am a smart, hardworking, loyal, friendly and resilient woman. I love cooking, travelling, reading and swimiming. I just began my transition into tech and I'm excited and anxious at the same time. I look forward to this opportunity and my journey in tech.
                 </p>
